[gd_scene load_steps=7 format=2]

[ext_resource path="res://GFX/PNG/Tiles/tile_537.png" type="Texture" id=1]
[ext_resource path="res://GFX/PNG/Tiles/tile_519.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Computer.gd" type="Script" id=3]
[ext_resource path="res://Scenes/ComputerPopup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Themes/NumPadTheme.tres" type="Theme" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 44, 29 )

[node name="Computer" type="Area2D"]
position = Vector2( 1051, 225 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 3 )

[node name="Monitor" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 30, 0 )
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 35, 0 )
rotation = 1.5708
texture = ExtResource( 2 )
color = Color( 0.0392157, 0.321569, 0.992157, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ComputerPopup" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="Label" type="Label" parent="." groups=["Labels"]]
margin_left = -57.0
margin_top = -7.0
margin_right = -17.0
margin_bottom = 7.0
theme = ExtResource( 5 )
text = "test"
align = 1
valign = 1
uppercase = true

[connection signal="body_entered" from="." to="." method="_on_Computer_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Computer_body_exited"]
